# st_preprocessing

./: .gitignore  ARCHITECTURE.md  DESIGN_PATTERNS_USAGE.md  README.md  docker_compose.yaml  pyproject.toml
notebooks/: lion.ipynb  lion_tests.ipynb
notebooks/.ipynb_checkpoints/: lion-checkpoint.ipynb
scripts/: load_nyc.py
src/st_preprocessing/: data_loader.py  pipeline.py  settings.py
src/st_preprocessing/db/: __init__.py  db.py
src/st_preprocessing/documents/: __init__.py  document_loader.py
src/st_preprocessing/documents/align/: __init__.py
src/st_preprocessing/documents/classify/: __init__.py
src/st_preprocessing/documents/collect/: __init__.py
src/st_preprocessing/documents/geolocate/streetfind/: __init__.py
src/st_preprocessing/features/: feature_loader.py
src/st_preprocessing/imagery/: __init__.py  imagery_loader.py  source.py  source_strategies.py
src/st_preprocessing/locations/: __init__.py  location.py  location_geometry.py  universe.py
src/st_preprocessing/locations/sources/: __init__.py  lion.py  osm.py  sf.py  tiger.py
src/st_preprocessing/locations/sources/.ipynb_checkpoints/: lion_fixed-checkpoint.py
src/st_preprocessing/projects/: city_project.py  nyc.py  project_loader.py
src/st_preprocessing/projects/sources/: nyc.py
src/st_preprocessing/utils/: data_utils.py  errors.py  pipeline_mixin.py
src/st_preprocessing/utils/nyc_geocoding/: __init__.py  base.py  geocoders.py  models.py  normalizers.py  storage.py  throttling.py
tests/: test_universe_loader.py
(+1 files in other folders)
